# faster-python-bench

./: .gitignore  README.md  bench.py  bench_all.py  bench_cpython_versions.py  pyproject.toml  verify_correctness.py
baseline/: nbody.py  pipeline.py  spectral_norm.py
codon_benchmark/: bench.py  nbody.py  spectral_norm.py
cython_benchmark/: bench_pow_vs_sqrt.py  nbody.py  pipeline.py  pipeline_raw.py  setup.py  setup_nbody.py  setup_pow_vs_sqrt.py  setup_raw.py  setup_spectral_norm.py  spectral_norm.py  yyjson.pxd
data/: generate.py
docs/: cpython-versions.md  cython-minefield.md  new-wave-compilers.md  profiling.md
graalpy_benchmark/: nbody.py  spectral_norm.py
jax_benchmark/: bench_jax.py
mojo_benchmark/: bench.mojo  nbody.mojo  pipeline.mojo  pixi.toml  spectral_norm.mojo
mypyc_benchmark/: nbody.py  pipeline.py  spectral_norm.py
numba_benchmark/: nbody.py  pipeline.py  spectral_norm.py
numpy_benchmark/: spectral_norm.py
pypy_benchmark/: nbody.py  pipeline.py  spectral_norm.py
rust_benchmark/: Cargo.toml  pyproject.toml  run_rust_bench.py
rust_benchmark/src/: lib.rs
taichi_benchmark/: bench.py  nbody.py  spectral_norm.py
